fix: prevent collapsing menu & content

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -48,7 +48,7 @@ The content `<div>` is where all your content goes.
 */
 .content {
     margin: 0 auto;
-    padding: 0 2em;
+    padding: 2rem 2rem 0 2rem;
     max-width: 800px;
     margin-bottom: 50px;
     line-height: 1.6em;
